--- a/.github/workflows/build-and-deploy-docker-imageon.yml
+++ b/.github/workflows/build-and-deploy-docker-imageon.yml
@@ -4,96 +4,66 @@ on:
   push:
     branches:
       - main
-      - releases/*
-  workflow_dispatch:
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
-    env:
-      IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker
+    # Define a matrix of Node versions to build against
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x]
 
     steps:
-      # Step 1: Checkout the code
+      # Step 1: Checkout source code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Set up Node.js environment
+      # Step 2: Set up the specified Node.js version from the matrix
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: ${{ matrix.node-version }}
 
-      # Step 3: Cache npm dependencies for faster builds
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+      # Step 3: Install dependencies and build Angular app
+      - name: Install dependencies and build Angular app
+        run: |
+          npm ci
+          npm run build --prod
 
-      # Step 4: Install dependencies
-      - name: Install dependencies
-        run: npm ci
-
-      # Step 5: Run unit tests
-      - name: Run unit tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless
-
-      # Step 6: Build the Angular application
-      - name: Build Angular app
-        run: npm run build -- --prod
-
-      # Step 7: Set up Docker Buildx for advanced build
+      # Step 4: Set up Docker Buildx for advanced build features, including caching
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Step 8: Log in to Docker Hub
+      # Step 5: Login to Docker Hub using secrets
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Step 9: Cache Docker layers for faster rebuilds
-      - name: Cache Docker layers
-        uses: actions/cache@v3
+      # Step 6: Extract Docker metadata (e.g., image tags/labels)
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker
+          tags: latest
 
-      # Step 10: Build and tag Docker image (tag with SHA and branch)
-      - name: Build and tag Docker image
+      # Step 7: Build and push Docker image, using cache for efficiency
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
+          # Set image name and tags from metadata step
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          # Enable build cache
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:buildcache,mode=max
+          # Pushes both the cache and the built image
           push: true
-          tags: |
-            ${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_NAME }}:${{ github.sha }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
 
-      # Step 11: (Optional) Deployment Step or Notification
-      - name: Deployment Success Notification
-        if: success()
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: ${{ secrets.SMTP_SERVER }}
-          server_port: 587
-          username: ${{ secrets.SMTP_USERNAME }}
-          password: ${{ secrets.SMTP_PASSWORD }}
-          subject: "Angular Demo Docker Deployment Succeeded"
-          to: ${{ secrets.NOTIFY_EMAIL_TO }}
-          from: "github-actions@yourdomain.com"
-          body: |
-            🎉 Deployment succeeded on branch ${{ github.ref_name }}!
-            Docker Image: ${{ env.IMAGE_NAME }}:latest
-
-# End of workflow
-
+      # Step 8: Output success message for visibility
+      - name: Deployment result
+        run: echo "Docker image built and pushed to Docker Hub with tag 'latest' for Node version ${{ matrix.node-version }}"
