--- a/.github/workflows/build-and-deploy-docker-imageon.yml
+++ b/.github/workflows/build-and-deploy-docker-imageon.yml
@@ -4,66 +4,87 @@ on:
   push:
     branches:
       - main
+  pull_request:
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    # Define a matrix of Node versions to build against
-    strategy:
-      matrix:
-        node-version: [16.x, 18.x]
 
     steps:
-      # Step 1: Checkout source code
-      - name: Checkout repository
+      # Checkout the repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # Step 2: Set up the specified Node.js version from the matrix
-      - name: Set up Node.js
+      # Setup Node.js (Assuming Node 18.x for Angular)
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18
 
-      # Step 3: Install dependencies and build Angular app
-      - name: Install dependencies and build Angular app
-        run: |
-          npm ci
-          npm run build --prod
+      # Cache npm dependencies for faster builds
+      - name: Cache npm dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: npm-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            npm-${{ runner.os }}-
 
-      # Step 4: Set up Docker Buildx for advanced build features, including caching
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # Install dependencies
+      - name: Install dependencies
+        run: npm ci
 
-      # Step 5: Login to Docker Hub using secrets
-      - name: Log in to Docker Hub
+      # Lint the code (assumes a lint script exists)
+      - name: Lint
+        run: npm run lint
+
+      # Run tests (will pass if test script defined; optional)
+      - name: Run tests
+        run: npm test -- --watch=false --browsers=ChromeHeadless
+        continue-on-error: true # Comment: If no tests are present, this step will not fail the workflow
+
+      # Build Angular app
+      - name: Build Angular app
+        run: npm run build -- --configuration production
+
+      # Log in to GHCR (GitHub Container Registry)
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Step 6: Extract Docker metadata (e.g., image tags/labels)
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker
-          tags: latest
+      # Build Docker image (assumes Dockerfile in project root or adjust path if needed)
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
+          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
-      # Step 7: Build and push Docker image, using cache for efficiency
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          # Set image name and tags from metadata step
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          # Enable build cache
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:buildcache,mode=max
-          # Pushes both the cache and the built image
-          push: true
+      # Push Docker image to registry (only on main branch)
+      - name: Push Docker image
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: |
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
-      # Step 8: Output success message for visibility
-      - name: Deployment result
-        run: echo "Docker image built and pushed to Docker Hub with tag 'latest' for Node version ${{ matrix.node-version }}"
+      # Optional: Output image digest
+      - name: Image digest
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: |
+          echo "Image Digest:"
+          docker inspect --format='{{index .RepoDigests 0}}' ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+
+# Comments/Assumptions:
+# - Assumes the default Angular project structure.
+# - Assumes lint and test npm scripts are present. If not, adjust or remove those steps.
+# - Uses GitHub Container Registry (ghcr.io). Change to Docker Hub or another registry if needed.
+# - Uses GitHub Actions-provided GITHUB_TOKEN for authentication (sufficient for ghcr.io).
+# - Only pushes Docker images for main branch pushes for safety.
+# - Adjust Node.js version or Dockerfile path as needed.
+# - Caches NPM dependencies for faster builds.
+# - Uses Docker image tags for both the commit SHA and 'latest'.
