--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,150 +2,107 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
-
-env:
-  IMAGE_NAME: angular-demo-docker
-  REGISTRY: docker.io
-  DOCKERHUB_REPOSITORY: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
-  build-test:
+  build-and-test:
+    name: Build & Test (Node.js Matrix)
     runs-on: ubuntu-latest
-    timeout-minutes: 25
-    outputs:
-      image-tag: ${{ steps.meta.outputs.version }}
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x]
     steps:
+      # Step 1: Checkout the code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      # Step 2: Set up Node.js (matrix)
+      - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm
+          node-version: ${{ matrix.node-version }}
 
-      - name: Restore npm cache
+      # Step 3: Restore npm cache for dependencies
+      - name: Cache npm dependencies
         uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-npm-
+            ${{ runner.os }}-node-${{ matrix.node-version }}-
 
+      # Step 4: Install dependencies
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint code
+      # Step 5: Lint code base
+      - name: Lint Angular app
         run: npm run lint
 
-      - name: Run tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless --code-coverage
+      # Step 6: Run unit tests
+      - name: Run unit tests
+        run: npm test -- --watch=false --browsers=ChromeHeadless
 
-      - name: Archive test coverage artifacts
-        if: always()
+      # Step 7: Build Angular app (only on one Node version)
+      - name: Build Angular app
+        if: matrix.node-version == '18.x'
+        run: npm run build -- --configuration=production
+
+      # Step 8: Upload dist folder as artifact for later jobs
+      - name: Upload production build artifact
+        if: matrix.node-version == '18.x'
         uses: actions/upload-artifact@v4
         with:
-          name: test-coverage
-          path: coverage/
+          name: angular-dist
+          path: dist
 
-      - name: Build Angular app
-        run: npm run build -- --configuration production
-
-      - name: Determine Docker image tag (with short SHA)
-        id: meta
-        run: echo "version=$(echo ${GITHUB_SHA} | cut -c1-8)" >> $GITHUB_OUTPUT
-
-      - name: Cache Docker layers
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build Docker image (multi-stage)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: Dockerfile
-          push: false
-          tags: ${{ env.DOCKERHUB_REPOSITORY }}:${{ steps.meta.outputs.version }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
-          build-args: |
-            NODE_ENV=production
-
-  deploy:
-    needs: build-test
+  docker:
+    name: Build & Push Docker Image
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main' # Restrict deployment only to main branch
     steps:
+      # Step 1: Checkout code (needed for Docker context)
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Step 2: Download production build artifact
+      - name: Download production build
+        uses: actions/download-artifact@v4
+        with:
+          name: angular-dist
+          path: dist
+
+      # Step 3: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # Step 4: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Pull cached image
-        run: |
-          docker pull ${{ env.DOCKERHUB_REPOSITORY }}:${{ needs.build-test.outputs.image-tag }} || true
-
-      - name: Push Docker image to Docker Hub
+      # Step 5: Build and push Docker image using multi-stage Dockerfile
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile
           push: true
-          tags: |
-            ${{ env.DOCKERHUB_REPOSITORY }}:${{ needs.build-test.outputs.image-tag }}
-            ${{ env.DOCKERHUB_REPOSITORY }}:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:latest
           build-args: |
-            NODE_ENV=production
+            BUILD_FOLDER=dist
 
-      - name: Notify GitHub of Deployment Success
-        if: success()
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: ${{ secrets.SMTP_SERVER }}
-          server_port: ${{ secrets.SMTP_PORT }}
-          username: ${{ secrets.SMTP_USERNAME }}
-          password: ${{ secrets.SMTP_PASSWORD }}
-          subject: 'Docker image "${{ env.IMAGE_NAME }}" successfully deployed'
-          to: ${{ secrets.NOTIFICATION_EMAIL }}
-          body: |
-            The Docker image ${{ env.DOCKERHUB_REPOSITORY }}:${{ needs.build-test.outputs.image-tag }} has been pushed to Docker Hub.
+      # Step 6: Logout from Docker Hub
+      - name: Log out from Docker Hub
+        run: docker logout
 
-      - name: Notify on Failure
-        if: failure()
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: ${{ secrets.SMTP_SERVER }}
-          server_port: ${{ secrets.SMTP_PORT }}
-          username: ${{ secrets.SMTP_USERNAME }}
-          password: ${{ secrets.SMTP_PASSWORD }}
-          subject: 'CI/CD Pipeline Failed for "${{ env.IMAGE_NAME }}"'
-          to: ${{ secrets.NOTIFICATION_EMAIL }}
-          body: |
-            CI/CD pipeline failed for ${{ env.IMAGE_NAME }}. Please see GitHub Actions logs for details.
+# Note: 
+# - Replace secrets.DOCKERHUB_USERNAME and secrets.DOCKERHUB_TOKEN with your Docker Hub credentials in repository secrets.
+# - Ensure your Dockerfile is set up for multi-stage Angular builds and expects 'dist' as the build folder.
+# - Artifacts pass build outputs between jobs for clean separation and scalability.
+# - Only pushes to 'main' deploy Docker images. Pull requests won't deploy.
