--- a/.github/workflows/build-and-deploy-angular-application-on.yml
+++ b/.github/workflows/build-and-deploy-angular-application-on.yml
@@ -6,54 +6,53 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build Angular Application
     steps:
-      - name: Checkout repository
+      - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 18
 
-      - name: Cache node modules
+      - name: Cache Node Modules
         uses: actions/cache@v4
         with:
           path: |
-            **/node_modules
+            ~/.npm
+            node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm ci
 
-      - name: Run lint
-        run: npm run lint
+      - name: Run Lint
+        run: npm run lint --if-present
 
-      - name: Run tests
+      - name: Run Unit Tests
         run: npm run test -- --watch=false --browsers=ChromeHeadless
 
-      - name: Build Angular app
-        run: npm run build -- --configuration production
+      - name: Build Angular App
+        run: npm run build -- --prod
 
-      - name: Upload build artifact
+      - name: Archive Production Build
         uses: actions/upload-artifact@v4
         with:
-          name: angular-dist
+          name: dist
           path: dist/
 
   docker:
     needs: build
     runs-on: ubuntu-latest
-    name: Build and Push Docker Image
     steps:
-      - name: Checkout repository
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Download build artifact
+      - name: Download Build Artifact
         uses: actions/download-artifact@v4
         with:
-          name: angular-dist
-          path: dist/
+          name: dist
+          path: dist
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -64,34 +63,30 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract short SHA
-        id: vars
-        run: echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-
-      - name: Build and push Docker image
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:latest,${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:${{ env.SHORT_SHA }}
-          build-args: |
-            DIST_PATH=dist/
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:latest
 
   deploy:
     needs: docker
     runs-on: ubuntu-latest
-    name: Deploy to Production Server
     steps:
-      - name: Execute remote deploy script via SSH
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.PROD_SERVER_HOST }}
-          username: ${{ secrets.PROD_SERVER_USER }}
-          key: ${{ secrets.PROD_SERVER_SSH_KEY }}
-          port: ${{ secrets.PROD_SERVER_SSH_PORT }}
-          script: |
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:latest
-            docker stop angular-demo-docker || true
-            docker rm angular-demo-docker || true
-            docker run -d --name angular-demo-docker -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:latest
+      - name: Deploy to Server
+        env:
+          DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
+          DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+          DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+          DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:latest
+        run: |
+          echo "$DEPLOY_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key $DEPLOY_USER@$DEPLOY_HOST "
+            docker pull $DOCKER_IMAGE
+            docker stop angular-demo || true
+            docker rm angular-demo || true
+            docker run -d --name angular-demo -p 80:80 $DOCKER_IMAGE
+          "
+          rm private_key
