--- a/.github/workflows/angular-build-and-deploy.yml
+++ b/.github/workflows/angular-build-and-deploy.yml
@@ -30,11 +30,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Run npm audit
         run: npm audit --production --audit-level=moderate || exit 0
-      - name: Run CodeQL Analysis
+      - name: CodeQL Initialize
         uses: github/codeql-action/init@v3
         with:
           languages: javascript
-      - name: Perform CodeQL Analysis
+      - name: CodeQL Analyze
         uses: github/codeql-action/analyze@v3
 
   build:
@@ -45,12 +45,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-
       - name: Cache npm dependencies
         uses: actions/cache@v4
         with:
@@ -58,19 +56,14 @@ jobs:
           key: npm-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             npm-${{ runner.os }}-
-
       - name: Install dependencies
         run: npm ci
-
       - name: Lint
         run: npm run lint
-
       - name: Run Tests
         run: npm run test -- --watch=false --browsers=ChromeHeadless --no-progress --code-coverage
-
       - name: Build app
         run: npm run build -- --configuration production
-
       - name: Archive Production Build
         uses: actions/upload-artifact@v4
         with:
@@ -89,33 +82,27 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Download Build Artifact
         uses: actions/download-artifact@v4
         with:
           name: angular-dist
           path: dist/
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Extract version and tag
         id: vars
         run: |
           SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
           echo "SHORT_SHA=$SHORT_SHA" >> $GITHUB_OUTPUT
           echo "IMG_TAG=ghcr.io/${GITHUB_REPOSITORY}-angular:$SHORT_SHA" >> $GITHUB_OUTPUT
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -137,12 +124,10 @@ jobs:
     steps:
       - name: Create Deployment Tag
         run: echo "deploying latest docker image to production"
-      # Example deploy step (customize to env)
       - name: Deploy with Docker
         id: deploy-url
         run: |
           echo "url=https://your-production-url.example.com" >> $GITHUB_OUTPUT
-      # Optionally notify
       - name: Slack Notification
         if: always()
         uses: slackapi/slack-github-action@v1.24.0
