--- a/.github/workflows/angular-build-and-deploy.yml
+++ b/.github/workflows/angular-build-and-deploy.yml
@@ -4,35 +4,27 @@ on:
   push:
     branches:
       - main
-      - release/*
   pull_request:
     branches:
       - main
-      - release/*
   workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-permissions:
-  contents: read
-  id-token: write
-  packages: write
-
 jobs:
-  build:
-    name: Build Angular App
+  build-angular-app:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
-      - name: Checkout Source Code
-        uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: 18
 
       - name: Install Dependencies
         run: npm ci
@@ -41,114 +33,124 @@ jobs:
         run: npm run lint
 
       - name: Run Tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless
+        run: npm test -- --watch=false --browsers=ChromeHeadless
 
-      - name: Build Project
-        run: npm run build -- --configuration=production
+      - name: Build Angular App
+        run: npm run build -- --configuration production
 
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
+      - name: Upload Production Build Artifacts
+        uses: actions/upload-artifact@v3
         with:
-          name: angular-dist
+          name: dist
           path: dist/
 
-  dockerize:
-    name: Build and Push Docker Image
-    needs: build
+  docker-build-and-push:
+    needs: build-angular-app
     runs-on: ubuntu-latest
-    timeout-minutes: 20
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/')
+    timeout-minutes: 10
     steps:
-      - name: Checkout Source Code
-        uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Download Angular Build Artifact
-        uses: actions/download-artifact@v4
+      - name: Download Production Build Artifacts
+        uses: actions/download-artifact@v3
         with:
-          name: angular-dist
+          name: dist
           path: dist/
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v2
 
-      - name: Log in to GitHub Docker Registry
-        uses: docker/login-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract Docker Metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and Push Docker Image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v4
         with:
           context: .
+          file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          build-args: |
-            BUILD_PATH=dist/
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:latest
 
-  deploy:
-    name: Deploy Application
-    needs: dockerize
+  deploy-to-production:
+    needs: docker-build-and-push
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/')
-    environment:
-      name: Production
-      url: ${{ steps.deploy.outputs.url }}
     steps:
-      - name: Download Angular Build Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: angular-dist
-          path: dist/
-
-      - name: Deploy to Server (Placeholder)
-        id: deploy
+      - name: Deploy to Production Server
         env:
-          SERVER_HOST: ${{ secrets.DEPLOY_HOST }}
-          SERVER_USERNAME: ${{ secrets.DEPLOY_USER }}
-          SERVER_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
-          DOCKER_IMAGE: ghcr.io/${{ github.repository }}:latest
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
         run: |
-          echo "This is a placeholder for your production deployment step."
-          # Example ssh + docker pull/run (uncomment and adjust as necessary):
-          # echo "$SERVER_KEY" > private_key.pem
-          # chmod 600 private_key.pem
-          # ssh -i private_key.pem -o StrictHostKeyChecking=no $SERVER_USERNAME@$SERVER_HOST "docker pull $DOCKER_IMAGE && docker stop angular-app || true && docker rm angular-app || true && docker run -d --name angular-app -p 80:80 $DOCKER_IMAGE"
-          # rm private_key.pem
+          echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -i private_key -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST << EOF
+            docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
+            docker pull $DOCKERHUB_USERNAME/angular-demo-docker:latest
+            docker stop angular-demo-docker || true
+            docker rm angular-demo-docker || true
+            docker run -d --name angular-demo-docker -p 80:80 $DOCKERHUB_USERNAME/angular-demo-docker:latest
+          EOF
+          rm -f private_key
 
-      - name: Set Deployment URL (Placeholder)
-        id: set-url
-        run: echo "url=https://your.production.url/" >> $GITHUB_OUTPUT
-
-  codeql:
-    name: CodeQL Analyze
+  security-scan:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
     permissions:
       actions: read
       contents: read
       security-events: write
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/') || github.event_name == 'pull_request'
+    timeout-minutes: 15
     steps:
-      - name: Checkout Source Code
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
           languages: javascript
 
-      - name: Autobuild
+      - name: Autobuild (with fallback)
+        id: autobuild
+        continue-on-error: true
         uses: github/codeql-action/autobuild@v3
+
+      - name: Fallback Manual Build (if autobuild failed)
+        if: steps.autobuild.outcome != 'success'
+        run: |
+          npm ci
+          npm run build
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+        with:
+          category: '/language:javascript'
+
+  upload-codeql-results:
+    needs: security-scan
+    runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+    if: always()
+    timeout-minutes: 5
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Download SARIF results
+        run: |
+          if [ -f ./results.sarif ]; then
+            echo "SARIF file exists"
+          else
+            echo "No SARIF result found" > /dev/null
+          fi
+
+      - name: Upload CodeQL database and results
+        if: hashFiles('**/results.sarif') != ''
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: ${{ github.workspace }}/results.sarif
